[project]
name = "amazon-chronos2-tutorial"
version = "0.1.0"
description = "Notebook-first, reproducible tutorial for Amazon Chronos-2 time-series foundation model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chronos-forecasting[extras]>=2.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    # Remote parquet reads (pandas -> fsspec) may use aiohttp for HTTP range requests.
    "fsspec>=2026.2.0",
    "aiohttp>=3.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "tqdm>=4.68.3",
]
